crates/formatter/tests/snapshots/snapshots__migrations__000348_remove_oauth2_app_name_unique_constraint.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Restore unique constraint on oauth2_provider_apps.name for rollback
-- Note: This rollback may fail if duplicate names exist in the database
alter table oauth2_provider_apps add constraint oauth2_provider_apps_name_key unique (
	name
);
