crates/formatter/tests/snapshots/snapshots__migrations__000348_remove_oauth2_app_name_unique_constraint.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Remove unique constraint on oauth2_provider_apps.name to comply with RFC 7591
-- RFC 7591 does not require unique client names, only unique client IDs
alter table oauth2_provider_apps drop constraint oauth2_provider_apps_name_key;
