crates/formatter/tests/snapshots/snapshots__migrations__000351_add_icon_and_description_template_version_presets.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_version_presets
	drop column if exists description,
	drop column if exists icon;
