crates/formatter/tests/snapshots/snapshots__migrations__000352_default_dynamic_templates.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates alter column use_classic_parameter_flow set default false;
