crates/formatter/tests/snapshots/snapshots__migrations__000353_template_level_cors.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type cors_behavior as enum (
	'simple',
	'passthru'
);

alter table templates
	add column cors_behavior cors_behavior not null default 'simple'::cors_behavior;

-- Update the template_with_users view by recreating it.
drop view if exists template_with_names;
create view template_with_names as
select
	templates.id,
	templates.created_at,
	templates.updated_at,
	templates.organization_id,
	templates.deleted,
	templates.name,
	templates.provisioner,
	templates.active_version_id,
	templates.description,
	templates.default_ttl,
	templates.created_by,
	templates.icon,
	templates.user_acl,
	templates.group_acl,
	templates.display_name,
	templates.allow_user_cancel_workspace_jobs,
	templates.allow_user_autostart,
	templates.allow_user_autostop,
	templates.failure_ttl,
	templates.time_til_dormant,
	templates.time_til_dormant_autodelete,
	templates.autostop_requirement_days_of_week,
	templates.autostop_requirement_weeks,
	templates.autostart_block_days_of_week,
	templates.require_active_version,
	templates.deprecated,
	templates.activity_bump,
	templates.max_port_sharing_level,
	templates.use_classic_parameter_flow,
	templates.cors_behavior, -- <--- adding this column
	COALESCE(visible_users.avatar_url, ''::text) as created_by_avatar_url,
	COALESCE(visible_users.username, ''::text) as created_by_username,
	COALESCE(visible_users.name, ''::text) as created_by_name,
	COALESCE(organizations.name, ''::text) as organization_name,
	COALESCE(organizations.display_name, ''::text) as organization_display_name,
	COALESCE(organizations.icon, ''::text) as organization_icon
from
	(
		(
			templates
			left join visible_users on ((templates.created_by = visible_users.id))
		)
		left join organizations on ((templates.organization_id = organizations.id))
	);

comment on view template_with_names is 'Joins in the display name information such as username, avatar, and organization name.';
